# Language_C_pour_les_nuls

./: CMakeLists.txt  Exo.txt  Little ASCII conversion code .c  Petite calculette.c  README.md  TD_2_Fonction_&_Procédure.c  TP_1.c  prime_number.c  return table .c  tp3_pointeur.c
Homework 1 The twoerclock/: The homework 1.c
