cmake_minimum_required(VERSION 4.0)
project(Language_C_pour_les_nuls C)

set(CMAKE_C_STANDARD 11)

add_executable(Language_C_pour_les_nuls
        prime_number.c
        TP_1.c
        "Little ASCII conversion code .c"
        "Petite calculette.c"
        "return table .c"
        "Homework 1 The twoerclock/The homework 1.c"
        TD_2_Fonction_&_Procédure.c
)
